--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,11 +3,11 @@
 * {
     margin: 0;
     padding: 0;
-    border: 0;
+    border: none;
 }
 
 body {
-    font-family: Lato; sans-serif;
+    font-family: Lato, sans-serif;
     font-weight: 300;
     color: #3a3a3a;
 }
@@ -26,6 +26,8 @@ h1, h2 {
     font-size: 280%;
 }
 
+/* navigation links */
+
 #menu {
     font-size: 110%;
     letter-spacing: 4px;
@@ -37,7 +39,7 @@ h1, h2 {
 
 #menu li {
     float: right;
-    list-style-type: none; 
+    list-style-type: none;
     margin-right: 30px;
 }
 
@@ -55,9 +57,29 @@ h1, h2 {
 }
 
 /* hero image */
-
+#hero-outer {
+    height: 600px;
+    width: 100%;
+    overflow: hidden;
+}
 #hero-image {
     height: 600px;
     width: 100%;
-    background: url('../images/hero-image.webp') no-repeat center center;
+    background: url('/images/hero-image.webp') no-repeat center center;
+
+/* animates zoom effect on loading page */
+    animation-name: hero-zoom;
+    animation-duration: 5s;
+    animation-fill-mode: forwards;
+
+}
+
+/* creates the level of zoom for hero image */
+@keyframes hero-zoom {
+    from{
+        transform: scale(1);
+    }
+    to{
+        transform: scale(1.1);
+    }
 }
