--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -155,7 +155,9 @@ hr {
     margin: 0 auto;
 }
 
+/* use image that is 300 x 300px */
 #circle-cover-bg {
     background: url('/images/ethos-center-image.jpeg') no-repeat center center;
     height: 100%;
+    border-radius: 50%;
 }
