--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,6 +58,7 @@ h1, h2 {
 }
 
 /* hero image and cover text */
+
 #hero-outer {
     height: 600px;
     width: 100%;
@@ -66,7 +67,7 @@ h1, h2 {
     position: relative;
 }
 
-#cover-text {
+#cover-text, #cover-text h2 {
     color: #fff;
 }
 
@@ -215,6 +216,8 @@ hr {
     color: #fafafa;
 }
 
+/* footer */
+
 footer {
     height: 150px;
 }
@@ -321,5 +324,16 @@ footer {
     .left-about-heading p, .right-about-heading p {
         text-align: center;
         padding: 0 20px;
+    }
+
+    #photos {
+        column-count: 3;
+    }
+}
+
+/* For small screen sizes 800px and down */
+@media screen and (max-width: 800px) {
+    #photos {
+        column-count: 2;
     }
 }
